# terrestrial-forest-monitor

./: .gitignore  .gitlab-ci-runners-templates.yml  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE.md  Main.qml  README.md  TFM.session.sql  build-with-cmake.sh  conanfile.txt  main.cpp  tfm.pro  wasm-to-docs.js
.github/workflows/: deploy-qt-app.yml  linux_release.yml  windows_release.yml
APPS/: CMakeLists.txt  wellcome.qml
APPS/CI27/: Ecke.qml  Einstellungen.qml  Traktliste.qml
APPS/CI27/settings/: Privileges.qml
AuthOpenApi/: AuthState.qml  AuthWrapper.qml  AuthenticationButton.qml  CMakeLists.txt  LoginDialog.qml  LoginForm.qml  LoginFormForm.ui.qml  README.md
Components/AuthOpenApi/: AuthState.qml  AuthUtils.qml  AuthenticationButton.qml  CMakeLists.txt  LoginForm.qml
Components/Gnss/: bluetest.h
Components/Layouts/: Breadcrumb.qml  CMakeLists.txt  Components.qml  GenericButton.qml  GenericCard.qml  GenericDivider.qml  GenericForm.qml  GenericLine.qml  GenericTextField.qml  IconButton.qml  MainContent.qml  MapWrapper.qml  RootLayout.qml  SideBar.qml
Components/Layouts/GenericForm/: SendButton.qml  TextField.qml
Components/NetworkState/: networkstate.h
Components/SyncOpenApi/: CMakeLists.txt  CreateSchema.qml  SchemaSelection.qml  Sqlite.qml  SyncButton.qml  SyncTables.qml  SyncUtils.qml  TableRowToLayout.qml  sqlite.mjs
Generic/: BasicLayout.qml  CMakeLists.txt  ComponentsList.qml  TopBar.qml
Generic/pages/: StartPage.qml
Gnss/: Connect.qml
Layouts/: BackPageLayout.qml  Breadcrumb.qml  BreadcrumbBtn.qml  CMakeLists.txt  ChildLayout.qml  Components.qml  Cove.qml  GenericButton.qml  GenericCard.qml  GenericDialog.qml  GenericDivider.qml  Icon.qml  IconButton.qml  RootLayout.qml  Style.qml
NetworkState/: CMakeLists.txt  NetworkState.qml  NetworkStateDialog.qml  NetworkStateQml.qml
Routes/: CMakeLists.txt
Routes/CI27/: Ecke.qml  EckeTest.qml  Ecken.qml  Einstellungen.qml  Traktliste.qml
StaticData/: CMakeLists.txt  ContentLoader.qml  bwi_de_001_dev.json  schema.json
SyncOpenApi/: SyncTablesForm.qml
_deprecated_Components/AuthOpenApi/: AuthWrapper.qml  AuthenticationButton.qml  LoginForm.qml  README.md  TestToken.qml
_deprecated_Components/Gnss/: Bluetest.qml  CMakeLists.txt  bluetest.cpp
_deprecated_Components/Layouts/: Breadcrumb.qml  BreadcrumbBtn.qml  ChildLayout.qml  ColorFieldBtn.qml  GenericDialog.qml  GenericLine.qml  MainContent.qml
_deprecated_Components/NetworkState/: networkstate.cpp
_deprecated_Components/SyncOpenApi/: SchemaSelection.qml
_deprecated_Generic/: BasicPage.qml  ComponentsList.qml
_deprecated_Generic/layouts/: SideBar2.qml
_deprecated_Routes/CI27/: EckeTest.qml
_deprecated_StaticData/: CMakeLists.txt  ContentLoader.qml
_deprecated_targets/linux/: runPipeline.rb
android/: AndroidManifest.xml
docs/: index.html  playground.js  tfm.js
i18n/: qml_de.ts  qml_en.ts
js/: addFormats.js  dereference.js  index.html  index.js  package-lock.json  package.json  rollup.config.mjs  wasm-to-docs.js
keystore/: release-key.keystore
src/: Main.qml  main.cpp
src/Components/AuthOpenApi/: AuthState.qml  AuthUtils.qml  AuthWrapper.qml  AuthenticationButton.qml  CMakeLists.txt  LoginDialog.qml  LoginForm.qml
src/Components/Gnss/: BluetoothSearch.qml  CMakeLists.txt  Connect copy.qml  Connect.qml  DeviceList.qml  GpsInfo.qml  bluetoothdevices.cpp  bluetoothdevices.h  bluetoothgps.cpp  bluetoothgps.h  connectionhandler.cpp  connectionhandler.h  devicefinder.cpp  devicefinder.h  devicehandler.cpp  devicehandler.h  deviceinfo.cpp  deviceinfo.h
src/Components/Layouts/: Breadcrumb.qml  CMakeLists.txt  ChildLayout.qml  Components.qml  GenericButton.qml  GenericCard.qml  GenericDialog.qml  GenericForm.qml  GenericJsonObject.qml  GenericMap.qml  GenericTextField.qml  GenericToast.qml  GenericToastManager.qml  Icon.qml  IconButton.qml  MapWrapper.qml  RootLayout.qml  Wrapping.qml
src/Components/Layouts/GenericForm/: SendButton.qml  TextField.qml
src/Components/NetworkState/: CMakeLists.txt  NetworkManager.h  NetworkStateQml.qml
src/Components/SyncOpenApi/: CMakeLists.txt  CreateSchema.qml  FilterRows.qml  HostIndicator.qml  HostSelection.qml  SchemaSelection.qml  Sqlite.qml  SyncButton.qml  SyncUtils.qml  TableRowToLayout.qml
src/Generic/: BackBar.qml  BasicPage.qml  CMakeLists.txt  ComponentsList.qml  TopBar.qml
src/Generic/pages/: Settings.qml
src/Routes/: CMakeLists.txt  wellcome.qml
src/Routes/CI27/: Ecke.qml  Ecken.qml  Einstellungen.qml  Traktliste.qml
src/StaticData/: CMakeLists.txt  ContentLoader.qml  _deprecated_response_1714067568845.json  b3_view.json  bwi_de_001_dev.json  contacts.json
targets/macOS/: runPipeline.rb
